# log_parser

./: .gitignore  datadog_log_parser.py  pyproject.toml
logscope/: __init__.py  __main__.py
logscope/core/: analysis.py  contract.py  datadog_format.py  fingerprint.py  flare_report.py  record.py  registry.py  store.py
logscope/scanners/: __init__.py  agent_files.py  flare.py  journald.py
logscope/web/: api.py  app.py  uploads.py
logscope/web/static/: app.js  index.html  style.css
tests/: conftest.py  test_api.py  test_datadog_format.py  test_filters.py  test_fingerprint.py  test_flare.py  test_flare_report.py  test_improvements.py  test_journald.py  test_registry.py  test_ui_playwright.py  test_upload.py
tests/fixtures/: broken_plugin.py  toy_scanner.py
