[project]
name = "logscope"
version = "0.1.0"
description = "Pluggable Datadog Agent log-analysis addon with a local web UI"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest", "httpx"]

[project.scripts]
logscope = "logscope.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["logscope*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
